--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,8 @@ language: java
 jdk:
   - openjdk8
 branches:
-  only: homework
+  only:
+    - homework
 env:
   global:
     - S3_BUCKET_NAME=jimmy-aws-training-homework-deploybucket-mr08q23q3j2u
